--- a/compose.yaml
+++ b/compose.yaml
@@ -9,6 +9,8 @@ services:
       WORDPRESS_DB_USER: root
       WORDPRESS_DB_PASSWORD: smailydev1
       WORDPRESS_DEBUG: 1
+      WORDPRESS_CONFIG_EXTRA: |
+        define( 'WP_MAILHOG_HOST', 'mailhog' );
     volumes:
     - wordpress:/var/www/html
     - ./:/var/www/html/wp-content/plugins/smaily-wordpress-plugin
